# ghxattn

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: synthetic.yaml
configs/experiment/: _smoke.yaml  ablation_concat_fusion.yaml  ablation_functional_only.yaml  ablation_no_conformal.yaml  ablation_no_fairdist.yaml  ablation_no_gh_prior.yaml  ablation_no_residual.yaml  ablation_no_site_bn.yaml  ablation_ordinal_time.yaml  ablation_structural_only.yaml  main.yaml  supplementary_external_uwhvf.yaml  supplementary_horizons.yaml
configs/model/: ghxattn.yaml
configs/train/: _smoke.yaml  main.yaml
docs/: deviations.md  implementation-map.md  project-context.md  repo-plan.md
ghxattn/cloth/: heads.py  model.py
ghxattn/creel/: assembly.py  batching.py  bundles.py  synthetic.py
ghxattn/dressing/: loader.py  schema.py  store.py
ghxattn/fulling/: conformal.py  transfer.py
ghxattn/inspection/: agreement.py  baselines.py  concentration.py  coverage.py  discordance.py  discrimination.py  equity.py  pointwise.py  protocol.py  significance.py
ghxattn/loom/: checkpoint.py  optim.py  schedule.py  seeding.py  trainer.py
ghxattn/mill/: __main__.py  commands.py  entry.py
ghxattn/reed/: prior.py
scripts/: launch_eval.sh  launch_train.sh  prepare_data.sh
tests/: helpers.py  test_config.py  test_conformal.py  test_determinism.py  test_gradients.py  test_invariants.py  test_metrics.py  test_overfit.py  test_regression.py  test_shapes.py  test_style_guard.py  test_training_smoke.py
(+8 files in other folders)
