[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghxattn"
version = "0.1.0"
description = "Multimodal Transformer for glaucomatous visual-field progression forecasting with a Garway-Heath topographic prior and MCID-anchored conformal calibration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch==2.3.*",
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "scikit-learn==1.5.*",
    "hydra-core==1.3.*",
    "omegaconf>=2.3",
    "pyyaml>=6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "black>=24", "isort>=5.13", "mypy>=1.11", "pre-commit>=3.7"]
retfound = ["timm>=1.0"]

[project.scripts]
ghxattn = "ghxattn.mill.entry:main"

[tool.setuptools.packages.find]
include = ["ghxattn*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ghxattn"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E741"]

[tool.ruff.lint.isort]
known-first-party = ["ghxattn"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["ghxattn"]
warn_unused_ignores = false
warn_return_any = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "hydra.*", "omegaconf.*", "yaml", "tqdm.*", "timm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
